k8s-dev1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argodemo-dev
  labels:
    app: argodemo-dev
spec:
  selector:
    app: argodemo-dev
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
