k8s-dev1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argodemo-dev
  labels:
    app: argodemo-dev
spec:
  # Change this hostname to match your OCP cluster's wildcard domain,
  # e.g. argodemo-dev.apps.<cluster-name>.<base-domain>
  host: https://demo1-dev.ocp.lab.mintly.fi
  to:
    kind: Service
    name: argodemo-dev
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
